[project]
name = "clockbot"
version = "1.1.0"
description = "Clock in-out check"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Lucas", email = "lvmigotto1@gmail.com"}
]

dependencies = [
    "beautifulsoup4>=4.13.2",
    "discord-py>=2.4.0",
    "functions-framework>=3.8.2",
    "holidays>=0.66",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
